added POST/PUT/DELETE Methods and docs